--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "core-js": "^3.1.4",
     "file-loader": "^4.1.0",
     "image-webpack-loader": "^5.0.0",
-    "next": "^9.1.6",
-    "node-sass": "^4.13.0",
+    "minimist": "^1.2.5",
+    "next": "^9.3.6",
+    "node-sass": "^4.14.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-markdown": "^4.1.0",
-    "reactstrap": "^8.0.1"
+    "reactstrap": "^8.0.1",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "webpack": "^4.39.1"
