--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "My own personal website!",
   "main": "index.js",
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "dev": "next",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start"
   },
   "keywords": [],
@@ -17,7 +16,9 @@
     "core-js": "^3.6.5",
     "file-loader": "^6.0.0",
     "image-webpack-loader": "^6.0.0",
+    "mkdirp": "^1.0.4",
     "next": "^9.3.6",
+    "node": "^14.0.0",
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
