--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "reactstrap": "^8.4.1",
+    "sass": "^1.26.5",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
