--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.2",
     "image-webpack-loader": "^6.0.0",
+    "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
     "next": "^9.5.2",
     "node": "^14.8.0",
@@ -29,6 +30,7 @@
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "sass": "^1.26.10",
+    "serialize-javascript": "^4.0.0",
     "yarn": "^1.22.4"
   },
   "devDependencies": {
