--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "description": "My own personal website!",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
+    "dev": "next-translate && next dev",
+    "build": "next-translate && next build",
     "start": "next start",
-    "profile": "next build --profile"
+    "profile": "next build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "@zeit/next-source-maps": "0.0.3",
     "chokidar": "^3.4.2",
     "core-js": "^3.6.5",
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.2",
+    "i18next": "^19.7.0",
     "image-webpack-loader": "^6.0.0",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
     "next": "^9.5.2",
+    "next-i18next": "^6.0.2",
+    "next-translate": "^0.17.2",
     "node": "^14.8.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
