--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^9.5.3",
     "next-translate": "^0.17.2",
     "node": "^14.8.0",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
