--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "My own personal website!",
   "main": "index.js",
   "scripts": {
-    "dev": "next-translate && next dev",
-    "build": "next-translate && next build --debug",
+    "dev": "next dev",
+    "build": "next build --debug",
     "start": "next start",
     "profile": "next build"
   },
@@ -17,14 +17,14 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.3",
     "bl": "^4.0.3",
-    "core-js": "^3.8.0",
+    "core-js": "^3.8.1",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.2",
     "image-webpack-loader": "^7.0.1",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
     "next": "^10.0.3",
-    "next-translate": "^0.20.2",
+    "next-translate": "^1.0.0",
     "node": "^15.3.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
