--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "next dev",
     "build": "next build --debug",
     "start": "next start",
-    "profile": "next build"
+    "profile": "next build --profile"
   },
   "keywords": [],
   "author": "pimvh",
@@ -23,14 +23,14 @@
     "image-webpack-loader": "^7.0.1",
     "lodash": "^4.17.20",
     "mkdirp": "^1.0.4",
-    "next": "^10.0.3",
-    "next-translate": "^1.0.0",
-    "node": "^15.3.0",
+    "next": "^10.0.4",
+    "next-translate": "^1.0.1",
+    "node": "^15.4.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
-    "sass": "^1.29.0",
+    "sass": "^1.32.0",
     "serialize-javascript": "^5.0.1",
     "yarn": "^1.22.10"
   }
