--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.5",
     "serialize-javascript": "^5.0.1",
     "yarn": "^1.22.10"
