updated website, now does bilangual routing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "next dev",
-    "build": "next build --debug",
+    "build": "",
     "start": "next start",
     "profile": "next build --profile"
   },
@@ -17,19 +17,20 @@
     "@zeit/next-sass": "^1.0.1",
     "@zeit/next-source-maps": "0.0.3",
     "bl": "^4.1.0",
-    "core-js": "^3.9.0",
+    "core-js": "^3.9.1",
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.2",
     "image-webpack-loader": "^7.0.1",
     "lodash": "^4.17.21",
     "mkdirp": "^1.0.4",
-    "next": "^10.0.7",
-    "next-translate": "^1.0.3",
-    "node": "^15.8.0",
+    "next": "^10.0.8",
+    "next-translate": "^1.0.4",
+    "node": "^15.10.0",
     "node-fetch": "^2.6.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
+    "react-particles-js": "^3.4.1",
     "react-syntax-highlighter": "^15.4.3",
     "sass": "^1.32.8",
     "serialize-javascript": "^5.0.1",
