--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,12 +26,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Node.js environment
       - uses: actions/setup-node@v2.1.5
-      
-      - name: install packages 
+      - with: 
+        node-version: '15.x'
+      - run: npm ci
       - run: npm install 
       - run: npm run build --if-present 
-        env:
-          CI: true
-      
   
  
