--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,9 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: Setup Node.js environment
-      - uses: actions/setup-node@v2.1.5
-      - with: 
-        node-version: '15.x'
+        uses: actions/setup-node@v2.1.5
+        with: 
+          node-version: '15.x'
       - run: npm ci
       - run: npm install 
       - run: npm run build --if-present 
