--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,21 +1,23 @@
-name: auto-merge
+name: Dependabot PR
 
-on:
-  pull_request:
+on: pull_request_target
 
 jobs:
-  auto-merge:
+  auto-approve-and-merge:
+    name: Auto Approve & Merge
     runs-on: ubuntu-latest
+    if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
     steps:
       - uses: actions/checkout@v2
       - uses: ahmadnassri/action-dependabot-auto-merge@v2
         with:
-          target: minor
-          github-token: ${{ secrets.mytoken }}
+        target: minor
+        github-token: ${{ secrets.GH_ACCESS_TOKEN }}
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.5
         with:
           node-version: '15.x'
+
       - run: npm ci
       - run: npm install
       - run: npm run build --if-present
