--- a/package.json
+++ b/package.json
@@ -14,26 +14,18 @@
   "author": "pimvh",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-sass": "^1.0.1",
-    "@zeit/next-source-maps": "0.0.3",
-    "bl": "^5.0.0",
-    "core-js": "^3.11.1",
-    "fs": "0.0.1-security",
+    "glob": "^7.1.7",
+    "globby": "^11.0.3",
     "gray-matter": "^4.0.3",
-    "image-webpack-loader": "^7.0.1",
     "lodash": "^4.17.21",
-    "mkdirp": "^1.0.4",
-    "next": "^10.1.3",
+    "next": "^10.2.3",
     "next-translate": "^1.0.6",
     "node": "^16.0.0",
-    "node-fetch": "^2.6.1",
+    "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^5.0.3",
-    "react-particles-js": "^3.4.1",
     "react-syntax-highlighter": "^15.4.3",
-    "sass": "^1.32.12",
-    "serialize-javascript": "^5.0.1",
-    "yarn": "^1.22.10"
+    "sass": "^1.34.0"
   }
 }
